# Aletheion

./: Entity-Primaryuse-Machinesideartifact-Humangovernancesideartifact.csv  Podcast-Indexv1.md  README.md  aletheionmeshgovernancesrcalnALE-MESH-ATTESTOR-GOOGOLSWARM-DOCTRINE-001.aln  aletheionmeshgovernancesrcalnALE-MESH-ATTESTOR-GOOGOLSWARM-ROLE-001.aln
.github/workflows/: ALE-COMPLIANCE-PREFLIGHT-001.yml  SMART-CHAIN-ENFORCE-001.yml  ale_comp_core_preflight.yml  aletheion-city-factory-001.yml  aletheion-compliance-preflight-002.yml  aletheion-compliance-preflight.yml  aletheion-erm-biotic-neurobiome-integration-chain-001.yml  aletheion-googolswarm-local-attest-preflight-001.yml  aletheion-governance-schema-preflight-001.yml  aletheion-governance-schema-preflight.yml  aletheion-no-silent-takeover-preflight.yml  aletheion-synthexis-heal-001.yml  aletheion-synthexis-nightly-002.yml  aletheion-synthexis-nightly-binding.yml  aletheion-trust-governed-decision-preflight-001.yml  aletheion-workflow-pattern-preflight.yml  aletheion_factory.yml  aletheion_meta_factory.yml  aletheion_research_validation.yml  ci-composite-mapping.yml
aletheion/: CONTRIBUTING.md  LICENSE  README.md  path-ontology.aln
aletheion-cil/: manifest.yaml
aletheion-cil/offline/: sync_protocol.rs
aletheion-comms/: manifest.yaml
aletheion-comms/5g/: five_g_deployment_manager.cpp
aletheion-comms/emergency/: emergency_broadcast_system.js
aletheion-comms/mesh/: mesh_network_protocol.rs
aletheion-comms/public/: public_wifi_access.aln
aletheion-core/compliance/: ALE_COMP_CORE_SPEC.md
aletheion-deploy/: manifest.yaml
aletheion-deploy/audit/: system_audit_tool.aln
aletheion-deploy/config/: configuration_validator.cpp
aletheion-deploy/docs/: deployment_guide.md
aletheion-deploy/installer/: city_installer_rust.rs
aletheion-docs/: README.md
aletheion-docs/api/: API_REFERENCE.md
aletheion-docs/architecture/: ARCHITECTURE_OVERVIEW.md
aletheion-docs/batch2/: checkpoint_specification.md
aletheion-docs/compliance/: COMPLIANCE_MATRIX.md
aletheion-docs/deployment/: DEPLOYMENT_CHECKLIST.md
aletheion-dsl/: manifest.yaml
aletheion-dsl/analytics/: homomorphic_analytics.cpp
aletheion-dsl/encryption/: pq_crypto_wrapper.rs
aletheion-dsl/identity/: did_wallet_manager.rs
aletheion-dsl/residency/: data_residency_enforcer.rs
aletheion-edu/: manifest.yaml
aletheion-edu/adaptive/: adaptive_learning_engine.rs
aletheion-edu/cultural/: cultural_preservation_platform.js
aletheion-edu/knowledge/: knowledge_graph_system.cpp
aletheion-edu/maker/: maker_space_scheduler.aln
aletheion-energy/: manifest.yaml
aletheion-energy/battery/: storage_distribution_system.cpp
aletheion-energy/grid/: load_balancing_engine.rs
aletheion-energy/solar/: generation_management_engine.rs
aletheion-energy/trading/: p2p_energy_trading.aln
aletheion-env/: manifest.yaml
aletheion-env/air/: quality_dust_detection.rs
aletheion-env/monsoon/: flood_detection.aln
aletheion-env/thermal/: thermal_management_system.cpp
aletheion-env/water/: reclamation_engine.rs
aletheion-gov/: manifest.yaml
aletheion-gov/civic/: citizen_participation_platform.js
aletheion-gov/dispute/: dispute_resolution_system.cpp
aletheion-gov/policy/: policy_management_protocol.aln
aletheion-gov/voting/: liquid_democracy_engine.rs
aletheion-gtl/: manifest.yaml
aletheion-gtl/biotic/: biotic_treaty_engine.rs
aletheion-gtl/birthsign/: birth_sign_model.schema.json  propagation_engine.rs
aletheion-gtl/envelope/: decision_envelope.schema.json  envelope_validator.aln
aletheion-gtl/fpic/: fpic_verification_module.rs
aletheion-gtl/grammar/: aln_rights_grammar.ebnf
aletheion-health/: manifest.yaml
aletheion-health/biosignal/: biosignal_collection_engine.rs
aletheion-health/medical/: medical_resource_allocation.cpp
aletheion-health/nutrition/: food_security_system.js
aletheion-health/wellness/: mental_health_support.aln
aletheion-housing/: manifest.yaml
aletheion-housing/accessible/: universal_design_validator.js
aletheion-housing/affordable/: affordable_hallocation_engine.rs
aletheion-housing/community/: community_land_trust.aln
aletheion-housing/sustainable/: sustainable_building_standards.cpp
aletheion-infra/: manifest.yaml
aletheion-infra/placement/: energy_aware_placer.rs
aletheion-mob/av/: av_compliance.rs  av_fleet_optimization.rs  av_maintenance.rs  av_routing.rs  av_safety.rs  charging_infrastructure.rs  passenger_experience.rs  traffic_prediction.rs
aletheion-mob/drone/: airspace_deconfliction.rs  drone_fleet_management.rs  emergency_protocols.rs  weather_adaptation.rs  wildlife_avoidance.rs
aletheion-mob/safety/: pedestrian_safety.rs
aletheion-mobility/: manifest.yaml
aletheion-phy/: manifest.yaml
aletheion-safety/: manifest.yaml
aletheion-waste/: manifest.yaml
aletheionermwater/: ALE-ERM-WATER-CANAL-FUNNEL-REQUIREMENTS-001.aln
aletheionermwatercanal/: ALE-ERM-WATER-CANAL-FUNNEL-CHECK-001.rs
aletheionermworkflow-index/: ALE-ERM-WATER-CANAL-FUNNEL-REQUIREMENTS-001.aln
aletheionsomaplex/: ALE-SOMAPLEX-CORRIDOR-VALIDATOR-001.rs
aletheiontransportfreight/: ALE-TM-FREIGHT-ORCH-002.rs  DOWNTOWN-FREIGHT-SOMAPLEX-CORRIDORS-001.aln  SMART05-SOMAPLEX-FREIGHT-DOWNTOWN-001.aln
aln/: ArtemisAletheionBridge2026v1.aln
cpp/: CMakeLists.txt  README.md
cpp/include/aletheion/: biofield_monitor.hpp  consciousness_preservation.hpp  constants.hpp  evidence_core.hpp  neurorights_guard.hpp  row_ledger.hpp  types.hpp
cpp/src/: evidence_core.cpp  main.cpp
docs/: NEURORIGHTS_POLICY.md  Nonfiction Canal and Sewer Design Lessons for Aletheion.md
javascript/: README.md  package.json
kotlin/: README.md
lua/: README.md  corridor_policy.lua  evidence_wallet.lua
modules/sensing/multi_sensor_ingestion/: Cargo.toml
modules/sensing/multi_sensor_ingestion/src/: lib.rs  main.rs
mojo/: README.md  evidence_kernel.mojo
rust/: Cargo.toml  README.md
rust/src/: evidence_core.rs  lib.rs  neurorights_guard.rs  row_ledger.rs
schemas/: healthcare_object.BCIClinicalAugmentation.v1
(+608 files in other folders)
