[package]
name = "multi-sensor-ingestion"
version = "1.0.0"
edition = "2021"
authors = ["Aletheion Core Team <core@aletheion.city>"]
description = "Multi-sensor ingestion pipeline for Aletheion GOD-city (Phoenix deployment)"

[dependencies]
async-nats = "0.33"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "aletheion-sensor-ingest"
path = "src/main.rs"
